; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_core_performance_counter_start.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_core_performance_counter_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.retro_perf_counter = type { i32, i32 }

@runloop_perfcnt_enable = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.retro_perf_counter*)* @core_performance_counter_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @core_performance_counter_start(%struct.retro_perf_counter* %0) #0 {
  %2 = alloca %struct.retro_perf_counter*, align 8
  store %struct.retro_perf_counter* %0, %struct.retro_perf_counter** %2, align 8
  %3 = load i64, i64* @runloop_perfcnt_enable, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %13

5:                                                ; preds = %1
  %6 = load %struct.retro_perf_counter*, %struct.retro_perf_counter** %2, align 8
  %7 = getelementptr inbounds %struct.retro_perf_counter, %struct.retro_perf_counter* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %7, align 4
  %10 = call i32 (...) @cpu_features_get_perf_counter()
  %11 = load %struct.retro_perf_counter*, %struct.retro_perf_counter** %2, align 8
  %12 = getelementptr inbounds %struct.retro_perf_counter, %struct.retro_perf_counter* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  br label %13

13:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @cpu_features_get_perf_counter(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
